# Library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.cpp  classes.cpp  classes.h  functions.h  helpers.cpp
include/: Book.h  Cart.h  Cliente.h  Storage.h  Store.h  classes.h  functions.h  helpers.h
src/: Book.cpp  Cart.cpp  Cliente.cpp  Storage.cpp  Store.cpp  app.cpp  classes.cpp  functions.cpp  helpers.cpp
